# aplanesdk

./: .gitignore  DISCLAIMER.md  LICENSE  Makefile  README.md
.github/workflows/: ci.yml  publish-sdks.yml
contracts/clientconfig/: README.md  invalid_default_type.yaml  invalid_identity_file_type.yaml  invalid_multiple_signers.yaml  invalid_remote_http.yaml  (+9 more)
docs/: MIGRATION_ENDPOINTS.md  USER_SDK_GO.md  USER_SDK_PYTHON.md  USER_SDK_TYPESCRIPT.md
go/: .gitignore  README.md  auth.go  auth_test.go  bounded_sentry.go  bounded_sentry_client.go  bounded_sentry_sign.go  bounded_sentry_sign_test.go  client.go  client_test.go  config.go  config_test.go  doc.go  encoding.go  endpoints.go  endpoints_test.go  error_codes_test.go  errors.go  go.mod  go.sum  guarded.go  guarded_simulate_test.go  guarded_test.go  integration_test.go  prep.go  prep_contract_test.go  prep_test.go  prepared.go  prepared_test.go  simulation.go  simulation_test.go  ssh.go  ssh_tokenproof.go  ssh_tokenproof_test.go  types.go  types_contract_test.go  types_test.go
python/: .gitignore  MANIFEST.in  README.md  pyproject.toml
python/aplanesdk/: __init__.py  _ssh_tokenproof.py  _version.py  algokit.py  signer.py
python/examples/: algokit_self_send.py  asa_transfer.py  atomic_swap.py  config.yaml.example  htlc_claim.py  send.py
python/tests/: test_algokit.py  test_client.py  test_contracts.py  test_integration.py  test_prep_contracts.py  test_ssh_tokenproof.py
scripts/: preflight-integration.sh
typescript/: .gitignore  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json
(+65 files in other folders)
