[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aplanesdk"
dynamic = ["version"]
description = "Python SDK for APlane transaction signing"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "APlane Project LLC" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
]
keywords = ["algorand", "blockchain", "signing", "post-quantum", "falcon"]
dependencies = [
    "py-algorand-sdk>=2.0.0",
    "paramiko>=3.0.0",
    "pyyaml>=6.0",
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/aplane-algo/aplanesdk"
Documentation = "https://github.com/aplane-algo/aplanesdk/tree/main/python"
Repository = "https://github.com/aplane-algo/aplanesdk"

[tool.setuptools.packages.find]
where = ["."]
include = ["aplanesdk*"]

[tool.setuptools.dynamic]
version = {attr = "aplanesdk._version.__version__"}

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
